--- a/public/index.html
+++ b/public/index.html
@@ -7,6 +7,9 @@
     <title>AI 日报周报生成器</title>
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="markdown.css">
+    <link rel="stylesheet" href="confirm-modal.css">
+    <link rel="stylesheet" href="thinking.css">
+    <link rel="stylesheet" href="history.css">
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600&display=swap" rel="stylesheet">
 </head>
 
@@ -59,6 +62,39 @@
                         <button id="btn-save-daily" class="success-btn">✅ 采用并保存</button>
                     </div>
                 </div>
+
+                <!-- Daily History (In-Tab) -->
+                <div class="sub-section-history">
+                    <div class="sub-header">
+                        <!-- Daily History (In-Tab) with Search -->
+                        <div class="sub-section-history">
+                            <div class="history-toolbar">
+                                <div class="toolbar-title">
+                                    <h4>📅 日报归档</h4>
+                                </div>
+                                <div class="toolbar-controls">
+                                    <!-- Page Size Selector -->
+                                    <select id="daily-limit" class="limit-select small-input">
+                                        <option value="5" selected>5条/页</option>
+                                        <option value="10">10条/页</option>
+                                        <option value="20">20条/页</option>
+                                    </select>
+                                    <span class="separator">|</span>
+
+                                    <input type="date" id="daily-start-date" class="date-input small-input">
+                                    <span class="separator">-</span>
+                                    <input type="date" id="daily-end-date" class="date-input small-input">
+                                    <input type="text" id="daily-keyword" placeholder="搜索日报内容..."
+                                        class="search-input small-input">
+                                    <button id="btn-search-daily" class="btn-primary icon-btn">🔍</button>
+                                </div>
+                            </div>
+
+                            <div id="daily-history-container" class="history-grid-container">
+                                <!-- Daily items injected here -->
+                            </div>
+                            <div id="daily-pagination" class="pagination small-pagination"></div>
+                        </div>
             </section>
 
             <!-- Weekly Report Section -->
@@ -71,7 +107,7 @@
                             <select id="weekly-style">
                                 <option value="formal">正式得体</option>
                                 <option value="tech">技术专业</option>
-                                <option value="casual">轻松自然</option>
+                                <option value="simple">简洁明了</option>
                             </select>
                         </div>
                         <button id="btn-generate-weekly" class="primary-btn">📊 生成周报</button>
@@ -80,24 +116,50 @@
 
                 <div class="preview-area" id="weekly-preview-container" style="display: none;">
                     <div class="preview-header">
-                        <h3>📄 周报预览</h3>
+                        <h3>📊 生成结果预览</h3>
                     </div>
-                    <textarea id="weekly-output" readonly></textarea>
+                    <!-- Rendered Markdown Container -->
+                    <div id="weekly-output-render" class="rendered-preview markdown-body"></div>
+
                     <div class="action-buttons">
                         <button id="btn-regenerate-weekly" class="secondary-btn">🔄 重新生成</button>
                         <button id="btn-save-weekly" class="success-btn">✅ 采用并保存</button>
                     </div>
                 </div>
-            </section>
 
-            <!-- History Section -->
-            <section class="history-section">
-                <h3>📚 本周记录</h3>
-                <div id="history-list" class="history-list">
-                    <!-- History items will be injected here -->
-                    <div class="loading">加载中...</div>
+                <!-- Weekly History (In-Tab) with Search -->
+                <div class="sub-section-history">
+                    <div class="history-toolbar">
+                        <div class="toolbar-title">
+                            <h4>📊 周报归档</h4>
+                        </div>
+                        <div class="toolbar-controls">
+                            <!-- Page Size Selector -->
+                            <select id="weekly-limit" class="limit-select small-input">
+                                <option value="5" selected>5条/页</option>
+                                <option value="10">10条/页</option>
+                                <option value="20">20条/页</option>
+                            </select>
+                            <span class="separator">|</span>
+
+                            <input type="date" id="weekly-start-date" class="date-input small-input">
+                            <span class="separator">-</span>
+                            <input type="date" id="weekly-end-date" class="date-input small-input">
+                            <input type="text" id="weekly-keyword" placeholder="搜索周报内容..."
+                                class="search-input small-input">
+                            <button id="btn-search-weekly" class="btn-primary icon-btn">🔍</button>
+                        </div>
+                    </div>
+
+                    <div id="weekly-history-container" class="history-grid-container">
+                        <!-- Weekly items injected here -->
+                    </div>
+                    <div id="weekly-pagination" class="pagination small-pagination"></div>
                 </div>
             </section>
+
+            <!-- History Section Removed (Split into tabs) -->
+            <!-- Global history can be accessed via a separate page or modal if needed later -->
         </main>
     </div>
 
@@ -155,6 +217,22 @@
             </div>
             <div class="modal-footer">
                 <button id="btn-copy-report" class="secondary-btn">复制内容</button>
+            </div>
+        </div>
+    </div>
+
+    <!-- Confirm Modal -->
+    <div id="confirm-modal" class="modal">
+        <div class="modal-content">
+            <div class="modal-header">
+                <h2>⚠️ 确认提示</h2>
+            </div>
+            <div class="modal-body">
+                <p id="confirm-message"></p>
+            </div>
+            <div class="modal-footer">
+                <button id="btn-cancel-confirm" class="secondary-btn">取消</button>
+                <button id="btn-ok-confirm" class="primary-btn">确定</button>
             </div>
         </div>
     </div>
