--- a/public/index.html
+++ b/public/index.html
@@ -11,6 +11,7 @@
     <link rel="stylesheet" href="css/confirm-modal.css">
     <link rel="stylesheet" href="css/thinking.css">
     <link rel="stylesheet" href="css/history.css">
+    <link rel="stylesheet" href="css/edit-report.css">
     <link
         href="https://fonts.googleapis.com/css2?family=Outfit:wght@400;500;600;700&family=Inter:wght@400;500&display=swap"
         rel="stylesheet">
@@ -61,42 +62,100 @@
                     <label for="daily-input">今日工作内容：</label>
                     <textarea id="daily-input" placeholder="1. 完成了... 2. 修复了... 3. 参加了..."></textarea>
 
-                    <div class="controls">
-                        <div class="style-select">
-                            <span>风格：</span>
-                            <div class="custom-select-wrapper" id="daily-style-wrapper">
-                                <div class="custom-select-trigger">
-                                    <span class="selected-text">正式得体</span>
+                    <div class="controls-dual-row">
+                        <div class="controls-row">
+                            <div class="controls-left">
+                                <div class="style-select">
+                                    <span>风格：</span>
+                                    <div class="custom-select-wrapper" id="daily-style-wrapper">
+                                        <div class="custom-select-trigger">
+                                            <span class="selected-text">正式得体</span>
+                                        </div>
+                                        <div class="custom-options">
+                                            <div class="custom-option selected" data-value="formal">正式得体</div>
+                                            <div class="custom-option" data-value="tech">技术专业</div>
+                                            <div class="custom-option" data-value="casual">轻松自然</div>
+                                        </div>
+                                        <select id="daily-style" style="display:none">
+                                            <option value="formal" selected>正式得体</option>
+                                            <option value="tech">技术专业</option>
+                                            <option value="casual">轻松自然</option>
+                                        </select>
+                                    </div>
                                 </div>
-                                <div class="custom-options">
-                                    <div class="custom-option selected" data-value="formal">正式得体</div>
-                                    <div class="custom-option" data-value="tech">技术专业</div>
-                                    <div class="custom-option" data-value="casual">轻松自然</div>
+                                <div class="role-select-group">
+                                    <span>角色：</span>
+                                    <div class="custom-select-wrapper" id="daily-role-wrapper">
+                                        <div class="custom-select-trigger">
+                                            <span class="selected-text">通用</span>
+                                        </div>
+                                        <div class="custom-options">
+                                            <div class="custom-option selected" data-value="通用">通用</div>
+                                            <div class="custom-option" data-value="Java开发">Java开发</div>
+                                            <div class="custom-option" data-value="前端开发">前端开发</div>
+                                            <div class="custom-option" data-value="后端开发">后端开发</div>
+                                            <div class="custom-option" data-value="全栈开发">全栈开发</div>
+                                            <div class="custom-option" data-value="产品经理">产品经理</div>
+                                            <div class="custom-option" data-value="测试工程师">测试工程师</div>
+                                            <div class="custom-option" data-value="运维工程师">运维工程师</div>
+                                            <div class="custom-option" data-value="项目经理">项目经理</div>
+                                            <div class="custom-option" data-value="UI设计师">UI设计师</div>
+                                            <div class="custom-option" data-value="数据分析师">数据分析师</div>
+                                            <div class="custom-option" data-value="运营">运营</div>
+                                            <div class="custom-option" data-value="销售">销售</div>
+                                        </div>
+                                        <select id="daily-role" style="display:none">
+                                            <option value="通用" selected>通用</option>
+                                            <option value="Java开发">Java开发</option>
+                                            <option value="前端开发">前端开发</option>
+                                            <option value="后端开发">后端开发</option>
+                                            <option value="全栈开发">全栈开发</option>
+                                            <option value="产品经理">产品经理</option>
+                                            <option value="测试工程师">测试工程师</option>
+                                            <option value="运维工程师">运维工程师</option>
+                                            <option value="项目经理">项目经理</option>
+                                            <option value="UI设计师">UI设计师</option>
+                                            <option value="数据分析师">数据分析师</option>
+                                            <option value="运营">运营</option>
+                                            <option value="销售">销售</option>
+                                        </select>
+                                    </div>
                                 </div>
-                                <select id="daily-style" style="display:none">
-                                    <option value="formal" selected>正式得体</option>
-                                    <option value="tech">技术专业</option>
-                                    <option value="casual">轻松自然</option>
-                                </select>
+                            </div>
+                            <div class="controls-right">
+                                <button id="btn-generate-daily" class="primary-btn">
+                                    <svg class="icon-inline" viewBox="0 0 24 24">
+                                        <path
+                                            d="m12 3-1.912 5.813a2 2 0 0 1-1.275 1.275L3 12l5.813 1.912a2 2 0 0 1 1.275 1.275L12 21l1.912-5.813a2 2 0 0 1 1.275-1.275L21 12l-5.813-1.912a2 2 0 0 1-1.275-1.275L12 3Z">
+                                        </path>
+                                    </svg>
+                                    生成日报
+                                </button>
                             </div>
                         </div>
-                        <button id="btn-generate-daily" class="primary-btn">
-                            <svg class="icon-inline" viewBox="0 0 24 24">
-                                <path
-                                    d="m12 3-1.912 5.813a2 2 0 0 1-1.275 1.275L3 12l5.813 1.912a2 2 0 0 1 1.275 1.275L12 21l1.912-5.813a2 2 0 0 1 1.275-1.275L21 12l-5.813-1.912a2 2 0 0 1-1.275-1.275L12 3Z">
-                                </path>
-                            </svg>
-                            生成日报
-                        </button>
                     </div>
                 </div>
 
                 <div class="preview-area" id="daily-preview-container" style="display: none;">
-                    <div class="preview-header">
+                    <div class="preview-header-with-edit">
                         <h3>📄 生成结果预览</h3>
+                        <button id="btn-edit-daily" class="edit-toggle-btn" title="编辑内容">
+                            <svg viewBox="0 0 24 24">
+                                <path d="M11 4H4a2 2 0 0 0-2 2v14a2 2 0 0 0 2 2h14a2 2 0 0 0 2-2v-7"></path>
+                                <path d="M18.5 2.5a2.121 2.121 0 0 1 3 3L12 15l-4 1 1-4 9.5-9.5z"></path>
+                            </svg>
+                            <span class="edit-btn-text">编辑</span>
+                        </button>
                     </div>
-                    <!-- Rendered Markdown Container -->
-                    <div id="daily-output-render" class="rendered-preview markdown-body"></div>
+                    <!-- Content Wrapper for Edit/Preview Mode -->
+                    <div class="report-content-wrapper" id="daily-content-wrapper">
+                        <!-- Rendered Markdown Container (View Mode) -->
+                        <div id="daily-output-render" class="rendered-preview markdown-body"></div>
+                        <!-- Edit Textarea (Edit Mode) -->
+                        <textarea id="daily-edit-textarea" class="edit-textarea" style="display: none;"
+                            placeholder="在此编辑报告内容..."></textarea>
+                    </div>
+                    <div class="char-counter" id="daily-char-counter" style="display: none;"></div>
 
                     <div class="action-buttons">
                         <button id="btn-regenerate-daily" class="secondary-btn">
@@ -180,42 +239,100 @@
             <section id="weekly-section" class="tab-content">
                 <div class="weekly-intro">
                     <p>将自动读取本周已保存的日报，汇总生成周报。</p>
-                    <div class="controls">
-                        <div class="style-select">
-                            <span>风格：</span>
-                            <div class="custom-select-wrapper" id="weekly-style-wrapper">
-                                <div class="custom-select-trigger">
-                                    <span class="selected-text">正式得体</span>
+                    <div class="controls-dual-row">
+                        <div class="controls-row">
+                            <div class="controls-left">
+                                <div class="style-select">
+                                    <span>风格：</span>
+                                    <div class="custom-select-wrapper" id="weekly-style-wrapper">
+                                        <div class="custom-select-trigger">
+                                            <span class="selected-text">正式得体</span>
+                                        </div>
+                                        <div class="custom-options">
+                                            <div class="custom-option selected" data-value="formal">正式得体</div>
+                                            <div class="custom-option" data-value="tech">技术专业</div>
+                                            <div class="custom-option" data-value="simple">简洁明了</div>
+                                        </div>
+                                        <select id="weekly-style" style="display:none">
+                                            <option value="formal" selected>正式得体</option>
+                                            <option value="tech">技术专业</option>
+                                            <option value="simple">简洁明了</option>
+                                        </select>
+                                    </div>
                                 </div>
-                                <div class="custom-options">
-                                    <div class="custom-option selected" data-value="formal">正式得体</div>
-                                    <div class="custom-option" data-value="tech">技术专业</div>
-                                    <div class="custom-option" data-value="simple">简洁明了</div>
+                                <div class="role-select-group">
+                                    <span>角色：</span>
+                                    <div class="custom-select-wrapper" id="weekly-role-wrapper">
+                                        <div class="custom-select-trigger">
+                                            <span class="selected-text">通用</span>
+                                        </div>
+                                        <div class="custom-options">
+                                            <div class="custom-option selected" data-value="通用">通用</div>
+                                            <div class="custom-option" data-value="Java开发">Java开发</div>
+                                            <div class="custom-option" data-value="前端开发">前端开发</div>
+                                            <div class="custom-option" data-value="后端开发">后端开发</div>
+                                            <div class="custom-option" data-value="全栈开发">全栈开发</div>
+                                            <div class="custom-option" data-value="产品经理">产品经理</div>
+                                            <div class="custom-option" data-value="测试工程师">测试工程师</div>
+                                            <div class="custom-option" data-value="运维工程师">运维工程师</div>
+                                            <div class="custom-option" data-value="项目经理">项目经理</div>
+                                            <div class="custom-option" data-value="UI设计师">UI设计师</div>
+                                            <div class="custom-option" data-value="数据分析师">数据分析师</div>
+                                            <div class="custom-option" data-value="运营">运营</div>
+                                            <div class="custom-option" data-value="销售">销售</div>
+                                        </div>
+                                        <select id="weekly-role" style="display:none">
+                                            <option value="通用" selected>通用</option>
+                                            <option value="Java开发">Java开发</option>
+                                            <option value="前端开发">前端开发</option>
+                                            <option value="后端开发">后端开发</option>
+                                            <option value="全栈开发">全栈开发</option>
+                                            <option value="产品经理">产品经理</option>
+                                            <option value="测试工程师">测试工程师</option>
+                                            <option value="运维工程师">运维工程师</option>
+                                            <option value="项目经理">项目经理</option>
+                                            <option value="UI设计师">UI设计师</option>
+                                            <option value="数据分析师">数据分析师</option>
+                                            <option value="运营">运营</option>
+                                            <option value="销售">销售</option>
+                                        </select>
+                                    </div>
                                 </div>
-                                <select id="weekly-style" style="display:none">
-                                    <option value="formal" selected>正式得体</option>
-                                    <option value="tech">技术专业</option>
-                                    <option value="simple">简洁明了</option>
-                                </select>
+                            </div>
+                            <div class="controls-right">
+                                <button id="btn-generate-weekly" class="primary-btn">
+                                    <svg class="icon-inline" viewBox="0 0 24 24">
+                                        <line x1="18" y1="20" x2="18" y2="10"></line>
+                                        <line x1="12" y1="20" x2="12" y2="4"></line>
+                                        <line x1="6" y1="20" x2="6" y2="14"></line>
+                                    </svg>
+                                    生成周报
+                                </button>
                             </div>
                         </div>
-                        <button id="btn-generate-weekly" class="primary-btn">
-                            <svg class="icon-inline" viewBox="0 0 24 24">
-                                <line x1="18" y1="20" x2="18" y2="10"></line>
-                                <line x1="12" y1="20" x2="12" y2="4"></line>
-                                <line x1="6" y1="20" x2="6" y2="14"></line>
-                            </svg>
-                            生成周报
-                        </button>
                     </div>
                 </div>
 
                 <div class="preview-area" id="weekly-preview-container" style="display: none;">
-                    <div class="preview-header">
+                    <div class="preview-header-with-edit">
                         <h3>📊 生成结果预览</h3>
+                        <button id="btn-edit-weekly" class="edit-toggle-btn" title="编辑内容">
+                            <svg viewBox="0 0 24 24">
+                                <path d="M11 4H4a2 2 0 0 0-2 2v14a2 2 0 0 0 2 2h14a2 2 0 0 0 2-2v-7"></path>
+                                <path d="M18.5 2.5a2.121 2.121 0 0 1 3 3L12 15l-4 1 1-4 9.5-9.5z"></path>
+                            </svg>
+                            <span class="edit-btn-text">编辑</span>
+                        </button>
                     </div>
-                    <!-- Rendered Markdown Container -->
-                    <div id="weekly-output-render" class="rendered-preview markdown-body"></div>
+                    <!-- Content Wrapper for Edit/Preview Mode -->
+                    <div class="report-content-wrapper" id="weekly-content-wrapper">
+                        <!-- Rendered Markdown Container (View Mode) -->
+                        <div id="weekly-output-render" class="rendered-preview markdown-body"></div>
+                        <!-- Edit Textarea (Edit Mode) -->
+                        <textarea id="weekly-edit-textarea" class="edit-textarea" style="display: none;"
+                            placeholder="在此编辑周报内容..."></textarea>
+                    </div>
+                    <div class="char-counter" id="weekly-char-counter" style="display: none;"></div>
 
                     <div class="action-buttons">
                         <button id="btn-regenerate-weekly" class="secondary-btn">
